# os_lab_4

./: CMakeLists.txt  func.hpp  main1.cpp  main2.cpp  real1.cpp  real2.cpp  report4.docx
